# dj-blog

./: .gitignore  auth.http  blog.http  manage.py  pyproject.toml
apps/blog/: admin.py  api.py  factories.py  models.py  schemas.py  signals.py
apps/blog/migrations/: 0001_initial.py  0002_rename_dexcription_category_description.py  0003_alter_category_slug_alter_post_slug.py  0004_alter_category_options_alter_category_slug.py  0005_alter_post_slug.py
apps/user/: admin.py  api.py  apps.py  models.py  signals.py
apps/user/migrations/: 0001_initial.py  0002_alter_profile_info.py  0003_profile_user.py
config/settings/: base.py  dev.py  prod.py
core/: api.py  settings.back.py  settings.py  urls.py
